src/test/ui/issues/issue-23024.stderr
error[E0658]: the precise format of `Fn`-family traits' type parameters is subject to change. Use parenthetical notation (Fn(Foo, Bar) -> Baz) instead
  --> $DIR/issue-23024.rs:9:39
   |
LL |     println!("{:?}",(vfnfer[0] as dyn Fn)(3));
   |                                       ^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29625
   = help: add #![feature(unboxed_closures)] to the crate attributes to enable

error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/issue-23024.rs:9:39
   |
LL |     println!("{:?}",(vfnfer[0] as dyn Fn)(3));
   |                                       ^^ expected 1 type argument

error[E0191]: the value of the associated type `Output` (from the trait `std::ops::FnOnce`) must be specified
  --> $DIR/issue-23024.rs:9:35
   |
LL |     println!("{:?}",(vfnfer[0] as dyn Fn)(3));
   |                                   ^^^^^^ associated type `Output` must be specified

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0107, E0191, E0658.
For more information about an error, try `rustc --explain E0107`.
